# solidworks-api-mcp-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/sw-core/: Cargo.toml
crates/sw-core/src/: lib.rs
crates/sw-indexer/: Cargo.toml
crates/sw-indexer/src/: main.rs
crates/sw-mcp-server/: Cargo.toml
crates/sw-mcp-server/src/: lib.rs  main.rs
