[workspace]
members = [
  "crates/sw-core",
  "crates/sw-indexer",
  "crates/sw-mcp-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["solidworks-api-mcp contributors"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
bincode = { version = "2.0", features = ["serde"] }
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
lru = "0.12"
