[package]
name = "sw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core indexing, search, profiles, and payload storage for SolidWorks API MCP artifacts."
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
bincode.workspace = true
zstd.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
lru.workspace = true