[package]
name = "sw-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Indexer and validator for SolidWorks API MCP search artifacts."
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sw-core = { path = "../sw-core" }

[dev-dependencies]
tempfile = "3.15"