[package]
name = "sw-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server for targeted SolidWorks API documentation search and fetch."
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sw-core = { path = "../sw-core" }

[dev-dependencies]
tempfile = "3.15"